<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/checkpoint_row_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/checkpoint_row_title"
            android:layout_gravity="center_vertical|left"
            style="@android:style/TextAppearance.DeviceDefault.Large"/>

        <com.oof.customviews.BoxedProgressBar
            android:id="@+id/checkpoint_row_boxed_progress_bar"
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="18sp"
            custom:criticalColor="#CC0000"
            custom:intermediateColor="#FF8800"
            custom:nrOfBoxes="9"
            custom:setProgressInPercent="0"
            custom:startColor="#669900" 
            android:layout_gravity="center_vertical|left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/checkpoint_row_time_to_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/checkpoint_row_time_to_next_check_text"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_gravity="center_vertical|left" />

        

        <TextView
            android:id="@+id/checkpoint_row_update_freq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/checkpoint_row_update_frequency_text"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_gravity="center_vertical|left" />
    </LinearLayout>

</LinearLayout>